--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,13 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    role_hierarchy:
+        ROLE_SUBSCRIBER: ROLE_USER
+        ROLE_ADMIN:  ROLE_SUBSCRIBER
+
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/program, roles: ROLE_ADMIN }
+        - { path: ^/season, roles: ROLE_ADMIN }
+        - { path: ^/episode, roles: ROLE_ADMIN }
+        - { path: ^/actor, roles: ROLE_ADMIN }
+        - { path: ^/comment, roles: ROLE_ADMIN }
